# projet_A3_chauffage

./: README.md
code/: CMakeLists.txt  consigne.c  data.txt  main.c  makefile  regulation.c  test_sim.c  test_simulateur.c  trace.txt  visualisationC.c  visualisationT.c
